--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
         node-version: 20
     - name: Install dependencies
       run: npm ci
-    # - name: Run ESLint
-    #   run: npm run lint
+    - name: Run ESLint
+      run: npm run lint
     # - name: Run tests
     #   run: npm test
     - name: Build project
