--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         node-version: 20
     - name: Install dependencies
-      run: npm ci
+      run: npm install --legacy-peer-deps
     - name: Run ESLint
       run: npm run lint
     # - name: Run tests
