Added overrides to ESLintRC

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "plugins": ["@typescript-eslint", "react", "react-hooks", "jsx-a11y"],
+  // Overrides
   "rules": {
-    // your overrides here
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
